# zint

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WORKFLOW.md  bigint.hpp  build.ps1  div.hpp  mpn.hpp  mul.hpp  rng.hpp  scratch.hpp  tuning.hpp  zint.hpp
asm/: addmul_1_adx.S  addmul_1_adx.asm  mul_basecase_adx.S  mul_basecase_adx.asm  submul_1_adx.S  submul_1_adx.asm
bench/: bench_addmul_1.cpp  bench_basecase.cpp  bench_bitwise.cpp  bench_vs_gmp.cpp  bench_zint_vs_bigint.cpp  plot_bench.py
evaluations/v_001_radix_cache/: bench.txt  bench_div.csv  bench_mul.csv  meta.txt  report.md
evaluations/v_002_bitwise/: bench.txt  bench_div.csv  bench_mul.csv  meta.txt  report.md
evaluations/v_003_bench_stability/: bench.txt  bench_div.csv  bench_mul.csv  meta.txt  report.md
evaluations/v_004_bitwise_bench/: bench.txt  bench_div.csv  bench_mul.csv  bitwise_bigint.csv  bitwise_mpn_and.csv  bitwise_mpn_not.csv  bitwise_mpn_or.csv  bitwise_mpn_xor.csv  meta.txt  report.md
evaluations/v_005_addlsh/: bench.txt  bench_div.csv  bench_mul.csv  bitwise.txt  bitwise_bigint.csv  bitwise_mpn_and.csv  bitwise_mpn_not.csv  bitwise_mpn_or.csv  bitwise_mpn_xor.csv  meta.txt  report.md  tests.txt
evaluations/v_006_basecase_comba/: bench.txt  bench_div.csv  bench_mul.csv  bitwise_bigint.csv  bitwise_mpn_and.csv  bitwise_mpn_not.csv  bitwise_mpn_or.csv  bitwise_mpn_xor.csv  meta.txt  report.md
evaluations/v_007_basecase_bench/: basecase_mul.csv  basecase_sqr.csv  bench.txt  bench_div.csv  bench_mul.csv  bitwise_bigint.csv  bitwise_mpn_and.csv  bitwise_mpn_not.csv  bitwise_mpn_or.csv  bitwise_mpn_xor.csv  meta.txt  report.md
evaluations/v_008_basecase_dispatch/: basecase.txt  basecase_mul.csv  basecase_sqr.csv  bench.txt  bench_div.csv  bench_mul.csv  bitwise_bigint.csv  bitwise_mpn_and.csv  bitwise_mpn_not.csv  bitwise_mpn_or.csv  bitwise_mpn_xor.csv  meta.txt  report.md
evaluations/v_009_addmul_1_adx/: addmul_1.csv  addmul_1.txt  basecase_mul.csv  basecase_sqr.csv  bench.txt  bench_div.csv  bench_mul.csv  bitwise_bigint.csv  bitwise_mpn_and.csv  bitwise_mpn_not.csv  bitwise_mpn_or.csv  bitwise_mpn_xor.csv  meta.txt  report.md  tests.txt
evaluations/v_010_addmul_default/: addmul_1.csv  addmul_1.txt  basecase.txt  basecase_mul.csv  basecase_sqr.csv  bench.txt  bench_div.csv  bench_mul.csv  bitwise.txt  bitwise_bigint.csv  bitwise_mpn_and.csv  bitwise_mpn_not.csv  bitwise_mpn_or.csv  bitwise_mpn_xor.csv  meta.txt  report.md  tests.txt
ntt/: api.hpp  arena.hpp  common.hpp  profile.hpp
ntt/p30x3/: crt.hpp  cyclic_conv.hpp  mont_scalar.hpp  mont_vec.hpp  radix2.hpp  radix3.hpp  radix4.hpp  radix5.hpp  root_plan.hpp  scheduler.hpp
ntt/p50x4/: bailey.hpp  common.hpp  crt.hpp  fft.hpp  fft_ctx.hpp  mixed_radix.hpp  multiply.hpp  pointmul.hpp
ntt/simd/: avx2.hpp  v4.hpp
scripts/: msvc_env.ps1  plot_bench.py  plot_bigint_bitwise.py  plot_compare.py  run_eval.ps1
tests/: test_zint_correctness.cpp
